# grifter

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  elm.json
.github/workflows/: release.yml
client-desktop/: Cargo.toml
client-web/: dev.bat  elm.json  index.html  release.bat  robots.txt
client-web/assets/: fonts.css  main.js  reset.css
client-web/src/: AllGames.elm  Backend.elm  Main.elm  Shared.elm  SingleGame.elm
client-web/src/Page/: AllGames.elm  SingleGame.elm
docker/: Docker Setup.md  Dockerfile  docker-compose.yml
server/: .gitignore  Cargo.toml  build.rs
server/src/: api.rs  config.rs  game.rs  igdb.rs  main.rs  twitch.rs
src/: api.rs  config.rs  game.rs  igdb.rs  main.rs  twitch.rs
ui/: Pagination.elm  elm.json
ui/Page/: SingleGame.elm
ui/src/: Backend.elm  Main.elm  Pages.elm  Shared.elm
ui/src/Page/: AllGames.elm  Explore.elm  SingleGame.elm
ui/src/Pages/: Explore.elm
