[package]
authors = ['Terry Brashaw <terrybrashaw@gmail.com>']
build = 'build.rs'
edition = '2018'
name = 'grifter'
version = '0.2.0'

[dependencies]
flate2 = '1.0.18'
serde_json = '1.0.59'
toml = '0.5.7'
thiserror = "^1.0"
unicode-normalization = '0.1.13'
surf = "2.2.0"
tide = "0.16.0"
async-std = { version="1.9.0", features=["attributes"] }
serde = { version="1.0", features=["derive"] }
ureq = { version="1.5.1", features=["json"] }
futures = "0.3.15"
http-types = "2.11.1"

[build-dependencies]
walkdir = '2.3.2'
