[package]
authors = ['Terry Brashaw <terrybrashaw@gmail.com>']
build = 'build.rs'
edition = '2018'
name = 'grifter'
version = '0.2.0'

[dependencies]
flate2 = '1.0.21'
serde_json = '1.0.67'
toml = '0.5.8'
thiserror = "1.0.29"
unicode-normalization = '0.1.19'
serde = { version = "1.0.130", features = ["derive"] }
ureq = { version = "2.2.0" }
image = "0.23.14"
rouille = { version = "3.3.0", features = ["ssl"] }
openssl-sys = { version = "0.9.66", features = ["vendored"] }
num_cpus = "1.13.0"
crossbeam-channel = "0.5.1"

[build-dependencies]
walkdir = '2.3.2'
fs_extra = "^1.2.0"
