[package]
authors = ['Terry Brashaw <terrybrashaw@gmail.com>']
build = 'build.rs'
edition = '2024'
name = 'grifter'
version = '0.2.0'

[dependencies]
flate2 = '1.1.9'
serde_json = '1.0.150'
toml = '1.1.2'
thiserror = "2.0.18"
unicode-normalization = '0.1.25'
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.3.0" }
image = "0.25.10"
rouille = { version = "3.6.2", features = ["ssl"] }
openssl-sys = { version = "0.9.116", features = ["vendored"] }
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
blake2 = "0.10.6"
base64 = "0.22.1"

[build-dependencies]
walkdir = '2.5.0'
fs_extra = "1.3.0"
